--- a/scss/style.scss
+++ b/scss/style.scss
@@ -38,7 +38,7 @@ body {
 	max-width: 19.1281rem;
 	display: flex;
 	align-items: center;
-	font-size: 1rem;
+	font-size: clamp(0.45rem, 1.25vw, 1rem);
 	& span {
 		font: 600 4.2705em 'Darker Grotesque', sans-serif;
 		color: $text-color-green;
@@ -107,12 +107,8 @@ body {
 	&::after {
 		content: '';
 		position: absolute;
-		// top: 50%;
 		top: 0;
 		right: 0;
-		// translate: 2.5rem -50%;
-		translate: 0% 0%;
-		// width: 100%;
 		height: 100%;
 		aspect-ratio: 1;
 		background: url('@img/icons/icons.svg#phone') 0.6228rem center/ 1.7794rem no-repeat;
@@ -160,7 +156,8 @@ body {
 	.header__list {
 		display: flex;
 		align-items: center;
-		column-gap: 0.8897rem;
+		column-gap: 10px;
+		justify-content: space-between;
 		flex-wrap: wrap;
 	}
 	&__item {
@@ -174,6 +171,7 @@ body {
 		@include text-h7;
 		width: 100%;
 		display: inline-block;
+		font-size: 16px;
 		transition: color 0.2s ease;
 		@media (hover) {
 			&:hover {
@@ -188,9 +186,8 @@ body {
 		}
 	}
 
-	&__developers {
+	&__authors {
 		display: none;
-		text-align: center;
 	}
 
 	&__developer {
@@ -211,6 +208,16 @@ body {
 		display: none;
 	}
 	@media (width < $screen1024) {
+		&::before {
+			content: '';
+			position: fixed;
+			top: 0;
+			left: 0;
+			z-index: 0;
+			width: 100%;
+			height: clamp(82px, 10vw, 102px);
+			background: #fff;
+		}
 		&__container {
 			padding: 0.4rem 0;
 			justify-content: space-between;
@@ -218,7 +225,6 @@ body {
 		&__logo {
 			margin-right: 0.5rem;
 			max-width: 19.1281rem;
-			font-size: clamp(0.45rem, 1.5vw, 1rem);
 		}
 		&__nav {
 			position: fixed;
@@ -226,74 +232,81 @@ body {
 			right: -100%;
 			z-index: -10;
 			margin: 0;
-			// padding:  clamp(72px, 11vw, 92px) 0 0;
-			padding-top: 200px;
-			// padding: 0;
-			
 			width: 100%;
 			height: 100%;
-			display: flex;
-			align-items: center;
-			justify-content: center;
-			flex-direction: column;
-			background: #ffffff;
+			display: grid;
+			grid-template: auto 1fr auto / 1fr;
+			background: #f7f7f7ce;
+			backdrop-filter: blur(16px);
 			transition: right 0.3s ease;
 			overflow-y: auto;
-			&::before{
-				// content: '';
-				position: fixed;
-				width: 100%;
-				height: clamp(82px, 10vw, 102px);
-				top: 0;left: 0;
-				background: #fff;
-			}
 
 			&.-active {
 				right: 0;
 			}
 		}
 		&__list {
-			// width: 100%;
-			// flex-grow: 0;
-			margin-top: clamp(162px, 11vw, 202px) ;
-			margin-top: 300px;
-			width: clamp(320.0006px, 90vw, $container_maxWidth);
+			width: 100%;
+			margin-top: clamp(162px, 11vw, 202px);
+			margin-inline: auto;
+			width: clamp(320px, 90vw, $container_maxWidth);
 			height: auto;
 			row-gap: 60px;
-			flex-wrap: nowrap;
 		}
 		&__item {
-			// flex-grow: 0;
-			border: 2px solid #363333;
-			border-radius: 34px;
-			padding: 14px 16px;
-			width: clamp(320.0006px, 90vw, $container_maxWidth);
-
+			width: 100%;
 			&:first-of-type {
 				display: inline-block;
 			}
 		}
 		&__link {
+			border: 2px solid #363333;
+			border-radius: 34px;
+			padding: 14px 16px;
+			width: 100%;
+			font-size: 1.25rem;
+			@media (hover) {
+				&:hover {
+					border-color: $button-color-hover;
+					color: $button-color-hover;
+				}
+			}
+			&:focus-visible {
+				border-color: $button-color-hover;
+				color: $button-color-hover;
+			}
+			&:active {
+				border-color: $button-color-hover;
+				color: $button-color-hover;
+			}
 		}
-		&__developers {
+		&__authors {
 			margin-top: auto;
 			padding-block: 100px 20px;
 			display: block;
+			text-align: center;
+			font-size: 1.25rem;
+		}
+		&__author {
+			text-decoration: underline;
+			color: $text-color-black;
 		}
 		&__button {
+			&:active {
+				background: $button-color-hover;
+			}
 		}
 		&__burger {
 			position: relative;
 			margin-inline: 5px;
 			border-radius: 29.9996px;
 			aspect-ratio: 1.2;
-			display: block;
-			background: $button-color-normal;
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
 			gap: 6px;
+			background: $button-color-normal;
 			&::before,
 			&::after,
 			span {
@@ -318,7 +331,7 @@ body {
 				background: $button-color-hover;
 			}
 			&:active {
-				background: $button-color-active;
+				background: $button-color-hover;
 			}
 		}
 	}
