--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -10,6 +10,8 @@ $container_maxWidth: 76.5125rem;
 $text-color-black: #363333;
 $text-color-white: #fcfcfc;
 $text-color-green: #319e3c;
+$text-color-footer-hover: #81f664;
+$text-color-footer-active: #9cfca6;
 $button-color-normal: #319e3c;
 $button-color-hover: #24d035;
 $button-color-active: #078914;
