--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@ body {
 
 [class*='__container'] {
 	position: relative;
+	// padding-inline: 0px;
 	height: 100%;
 	width: clamp(320.0006px, 90vw, $container_maxWidth);
 	margin: 0 auto;
@@ -280,6 +281,7 @@ body {
 			display: block;
 			text-align: center;
 			font-size: 1.25rem;
+			line-height: 150%;
 		}
 		&__author {
 			text-decoration: underline;
@@ -983,23 +985,10 @@ body {
 		@include text-h9;
 		display: flex;
 		flex-direction: column;
-		row-gap: 1.35rem;
-	}
-
-	&__item {
-	}
-	
-	&__nav-link {
-		@media (hover) {
-			&:hover {
-				color: $text-color-footer-hover;
-			}
+		gap: 1.35rem;
+		&-item {
 		}
-		&:focus-visible {
-			color: $text-color-footer-hover;
-		}
-		&:active {
-			color: $text-color-footer-active;
+		&-link {
 		}
 	}
 
@@ -1010,130 +999,268 @@ body {
 		display: flex;
 		flex-direction: column;
 		row-gap: 0.6rem;
-	}
 
-	&__contact-address {
-	}
-
-	&__contact-phone {
-		line-height: 300%;
-		@media (hover) {
-			&:hover {
-				color: $text-color-footer-hover;
-			}
+		&-address {
 		}
-		&:focus-visible {
-			color: $text-color-footer-hover;
+		&-phone {
+			line-height: 300%;
 		}
-		&:active {
-			color: $text-color-footer-active;
+		&-email {
+			line-height: 200%;
 		}
 	}
 
+	&__nav-link,
+	&__contact-phone,
 	&__contact-email {
-		line-height: 200%;
+		width: fit-content;
+		background-image: linear-gradient(90deg, $text-color-footer-hover, $text-color-footer-active);
+		background-size: 0% 2px;
+		background-position: left bottom;
+		background-repeat: no-repeat;
+		transition: background 0.3s ease;
 		@media (hover) {
 			&:hover {
+				background-size: 100% 2px;
 				color: $text-color-footer-hover;
 			}
 		}
 		&:focus-visible {
+			background-size: 100% 2px;
 			color: $text-color-footer-hover;
 		}
 		&:active {
+			background-size: 100% 2px;
 			color: $text-color-footer-active;
 		}
 	}
 
 	&__schedule {
 		@include text-h9;
-	}
 
-	&__schedule-text {
-		&:not(:first-child) {
-			line-height: 350%;
+		&-text {
+			&:not(:first-child) {
+				line-height: 350%;
+			}
 		}
 	}
 
 	&__media {
 		margin-right: 7px;
-		// max-width: calc(4rem * 2);
 		display: flex;
 		flex-direction: row-reverse;
 		gap: 1.3rem;
-	}
-	&__media-column {
-		display: flex;
-		flex-direction: column;
-		gap: 1.3rem;
-	}
-	&__media-link {
-		height: 2.5rem;
-		aspect-ratio: 1;
-		background: $main-color-white;
-		transition: background 0.2s ease, scale 0.2s ease;
 
-		&._vb {
-			mask-image: url('@img/icons/icons.svg#vb');
+		&-column {
+			display: flex;
+			flex-direction: column;
+			gap: 1.3rem;
 		}
-		&._tg {
-			mask-image: url('@img/icons/icons.svg#tg');
-		}
-		&._wu {
-			mask-image: url('@img/icons/icons.svg#wu');
-		}
-		&._fb {
-			mask-image: url('@img/icons/icons.svg#fb');
-		}
-		&._inst {
-			mask-image: url('@img/icons/icons.svg#inst');
-		}
+		&-link {
+			height: 2.5rem;
+			aspect-ratio: 1;
+			background: $main-color-white;
+			transition: background 0.2s ease, scale 0.2s ease;
 
-		img {
-			width: 100%;
-			height: 100%;
-			object-fit: contain;
-			opacity: 0;
-			transition: opacity 0.2s ease;
-		}
+			&._vb {
+				mask-image: url('@img/icons/icons.svg#vb');
+			}
+			&._tg {
+				mask-image: url('@img/icons/icons.svg#tg');
+			}
+			&._wu {
+				mask-image: url('@img/icons/icons.svg#wu');
+			}
+			&._fb {
+				mask-image: url('@img/icons/icons.svg#fb');
+			}
+			&._inst {
+				mask-image: url('@img/icons/icons.svg#inst');
+			}
 
-		@media (hover) {
-			&:hover {
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: contain;
+				opacity: 0;
+				transition: opacity 0.2s ease;
+			}
+
+			@media (hover) {
+				&:hover {
+					scale: 1.3;
+					background: #ffffff4d;
+					background: transparent;
+					img {
+						opacity: 0.5;
+					}
+				}
+			}
+			&:focus-visible {
+				scale: 1.3;
 				background: #ffffff4d;
-				background: transparent;
 				img {
 					opacity: 0.5;
 				}
 			}
-		}
-		&:focus-visible {
-			background: #ffffff4d;
-			img {
-				opacity: 0.5;
-			}
-		}
-		&:active {
-			scale: 1.3;
-			background: #ffffff0c;
-			pointer-events: none;
-			img {
-				opacity: 1;
+			&:active {
+				scale: 0.8;
+				background: #ffffff0c;
+				pointer-events: none;
+				img {
+					opacity: 1;
+				}
 			}
 		}
 	}
-
 	&__authors {
 		padding-bottom: 30px;
 		text-align: left;
+		line-height: 150%;
 	}
 
 	&__author {
 		font-weight: 600;
 		text-decoration: underline;
 	}
-	@media (width <= $screen1280){
-	&__content {
-		
+	@media (width <= $screen1280) {
+		P,
+		a {
+			font-size: clamp(0.75rem, 1.7vw, 1.1rem);
+		}
+		&__content {
+			position: relative;
+			display: grid;
+			grid-template-areas:
+				'l n n'
+				'dh dh dh'
+				'm s c';
+			column-gap: 10px;
+			row-gap: 40px;
+			padding-block: 30px 30px;
+			&::before {
+				content: '';
+				grid-area: dh;
+				width: 100%;
+				height: 2px;
+				background: $main-color-white;
+			}
+		}
+
+		&__logo {
+			grid-area: l;
+		}
+
+		&__nav {
+			grid-area: n;
+			flex-direction: row;
+			align-items: center;
+			height: 100%;
+		}
+
+		&__contact {
+			grid-area: c;
+			border: none;
+			padding: 0;
+		}
+
+		&__schedule {
+			grid-area: s;
+		}
+
+		&__media {
+			grid-area: m;
+			flex-direction: row;
+			&-column {
+				flex-direction: row;
+			}
+			&-link {
+				height: 2rem;
+			}
+		}
 	}
+	@media (width <= $screen800) {
+		P,
+		a {
+			font-size: clamp(0.75rem, 2vw, 1rem);
+			&:not(.logo) {
+				font-size: clamp(0.75rem, 3vw, 1.5rem);
+			}
+		}
+		&__content {
+			grid-template-areas:
+				'l n m'
+				'dh dh dh'
+				's c c';
+			grid-template-columns: 1fr 1fr 100px;
+			column-gap: 5vw;
+		}
+		&__nav {
+			flex-direction: column;
+			align-items: start;
+		}
+		&__media {
+			flex-direction: row-reverse;
+
+			&-column {
+				flex-direction: column;
+			}
+		}
+	}
+	@media (width <= 500px) {
+		P,
+		a {
+			font-size: clamp(0.75rem, 5vw, 1.25rem);
+			&:not(.logo) {
+				font-size: clamp(0.75rem, 6.8vw, 1.5rem);
+				// font-size: 1.5rem;
+			}
+		}
+		&__logo{
+		}
+		&__content {
+			padding-bottom: 50px;
+			grid-template-areas: 'l' 'n' 'dh' 'c' 'dh2' 's' 'm';
+			grid-template-columns: 1fr;
+			&::after {
+				content: '';
+				grid-area: dh2;
+				width: 100%;
+				height: 2px;
+				background: $main-color-white;
+			}
+		}
+		&__nav{
+			display: block;
+			columns: 2;
+			&-item{
+				margin-bottom: 3rem;
+			}
+			&-link{
+				padding: 10px 10px;
+				width: fit-content;
+				display: inline-block;
+				// width: 100%;
+
+			}
+		}
+		&__contact{
+			// display: grid;
+			// grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+			// place-items: center;
+		}
+		&__media {
+			margin: 0 auto;
+			flex-direction: row;
+			$size: clamp(1rem, 10vw, 2.5rem);
+			gap: $size;
+			&-column {
+				flex-direction: row;
+				gap: $size;
+			}
+			&-link {
+				height: $size;
+			}
+		}
 	}
 }
