Form - now send messahe to telegram bot

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -351,7 +351,7 @@ body {
 			transition: all 0.2s ease;
 		}
 		&:not(:hover) {
-			scale: 0.75;
+			// scale: 0.75;
 		}
 		@media (hover) {
 			&:hover {
@@ -455,7 +455,7 @@ body {
 	}
 
 	&__button {
-		padding: 0.8897rem 0;
+		padding: 1.2rem 0;
 		width: 100%;
 	}
 }
